updated location in the warehouse and also updated the smart expiration duration and table view on top what all are expiring soon